Performance - Uso del valueOf
El uso de Long.valueOf en vez de new Long() puede mejorar el rendimiento.
Permite el uso de valores en cache evitando la locacion de objetos,
haciendo que el codigo sea mas rapido.

refs #2646

Signef-off-by: Uriel Gonzalez <ugonzalez@pol.una.py>